@@ -1,25 +1,42 @@
 package com.example.config;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
+/**
+ * Single source of truth for CORS.
+ *
+ * This used to be split across two independent places: this class (a
+ * standalone CorsFilter bean, allowing only :3000) and
+ * WebConfig.addCorsMappings (allowing only :5173). Spring Security's
+ * .cors(...) looks specifically for a CorsConfigurationSource bean, which
+ * neither of those actually was, so which origin (if either) was really
+ * in effect for a given request was ambiguous. Exposing a
+ * CorsConfigurationSource bean directly here removes that ambiguity, and
+ * WebConfig's addCorsMappings override has been removed to match.
+ */
 @Configuration
 public class CorsConfig {
 
     @Bean
-    public CorsFilter corsFilter() {
+    public CorsConfigurationSource corsConfigurationSource() {
 
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // React Application URL
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        // Covers both common React dev servers: Create React App (3000)
+        // and Vite (5173). Add your deployed frontend's origin here too
+        // once this goes anywhere beyond localhost.
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",
+                "http://localhost:5173"
+        ));
 
-        // Allowed HTTP Methods
         configuration.setAllowedMethods(Arrays.asList(
                 "GET",
                 "POST",
@@ -29,21 +46,16 @@ public class CorsConfig {
                 "OPTIONS"
         ));
 
-        // Allowed Headers
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
 
         // Allow JWT Authorization Header
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setExposedHeaders(List.of("Authorization"));
 
-        // Allow Credentials
         configuration.setAllowCredentials(true);
 
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
-
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-
-        return new CorsFilter(source);
+        return source;
     }
 
 }
